--- a/src/components/account/Profile/profile.module.scss
+++ b/src/components/account/Profile/profile.module.scss
@@ -5,7 +5,7 @@
   flex-direction: row;
   width: 100%;
   justify-content: space-between;
-  border: solid 1px black;
+ // border: solid 1px black;
 }
 
 .profile__body {
