--- a/src/components/courses/CourseHeader/course-header.module.scss
+++ b/src/components/courses/CourseHeader/course-header.module.scss
@@ -11,18 +11,18 @@
     margin: 0;
     padding: 0;
   }
-  border: solid 1px black;
+ // border: solid 1px black;
   align-items: center;
   height: fit-content;
 }
 
 .breadcrumb {
-  border: solid 1px red;
+ // border: solid 1px red;
 
   margin-bottom: 0 !important;
 }
 
 .active {
   text-decoration: none !important;
-  border: solid 1px black;
+ // border: solid 1px black;
 }
